--- a/part_7/handwritten_landing.html
+++ b/part_7/handwritten_landing.html
@@ -6,35 +6,64 @@
 <body>
   <h1>This is my awesome product (height: 200px)</h1>
 
-  <h3>What Does It Do (33%)</h3>
-  <p>This is what it does. Intrigued yet?</p>
-  <a href="#">Learn More</a>
+<div id="info">
+  <div class="block">
+    <h3>What Does It Do (33%)</h3>
+    <p>This is what it does. Intrigued yet?</p>
+    <a class="button" href="#">Learn More</a>
+  </div>
 
-  <h3>FAQ (33%)</h3>
-  <p>You've got questions. We've got answers.</p>
-  <a href="#">Go to the FAQ</a>
+  <div class="block">
+    <h3>FAQ (33%)</h3>
+    <p>You've got questions. We've got answers.</p>
+    <a class="button" href="#">Go to the FAQ</a>
+  </div>
 
-  <h3>Purchase Now (33%)</h3>
-  <p>Convinced?</p>
-  <a href="#">Buy Now</a>
+  <div class="block">
+    <h3>Purchase Now (33%)</h3>
+    <p>Convinced?</p>
+    <a class="button" href="#">Buy Now</a>
+  </div>
+</div>
 
-  <h3>Description (33%)</h3>
-  <p>In this screenshot, you see how easy it is to do awesome stuff with our product.</p>
-  <img src="screenshot_2.png">
+<div id="screen">
+  <div class="description">
+    <h3>Description (33%)</h3>
+    <p>In this screenshot, you see how easy it is to do awesome stuff with our product.</p>
+  </div>
 
-  <img src="screenshot_1.png">
-  <h3>Description of screenshot (33%)</h3>
-  <p>If you aren't convinced by this screenshot, you'll never be.</p>
+  <div class="screenshot">
+    <img src="screenshot_2.png">
+  </div>
 
-  <h3>Testimonial (25%)</h3>
-  <p>This product changed my life!</p>
+  <div class="screenshot">
+    <img src="screenshot_1.png">
+  </div>
+  <div class="description">
+    <h3>Description of screenshot (33%)</h3>
+    <p>If you aren't convinced by this screenshot, you'll never be.</p>
+  </div>
+</div>
 
-  <h3>Testimonial (25%)</h3>
-  <p>Best thing since sliced bread.</p>
+<div id="tests">
+  <div class="testimonial">
+    <h3>Testimonial (25%)</h3>
+    <p>This product changed my life!</p>
+  </div>
 
-  <h3>Testimonial (25%)</h3>
-  <p>It's kinda of "meh."</p>
+  <div class="testimonial">
+    <h3>Testimonial (25%)</h3>
+    <p>Best thing since sliced bread.</p>
+  </div>
 
+  <div class="testimonial">
+    <h3>Testimonial (25%)</h3>
+    <p>It's kinda of "meh."</p>
+  </div>
+</div>
+
+<div id="footer">
   <footer>&#169; Our Awesome Company 2013</footer>
+</div>
 </body>
 </html>
